--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "redux-mock-store": "^1.5.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
